--- a/services.html
+++ b/services.html
@@ -22,9 +22,33 @@
   <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicons/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-KXJS6Z8');</script>
+  <!-- End Google Tag Manager -->
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168583953-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-168583953-1');
+  </script>
+
 </head>
 
 <body class=" bg-secondary mb-0">
+
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KXJS6Z8"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
   <nav class="navbar navbar-dark bg-black navbar-expand-lg">
     <a class="navbar-brand" href="./index.html">
       <img class="mr-2" src="Assets/favicons/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt="Cameron Lund Logo" loading="lazy">
@@ -52,7 +76,7 @@
   <div class="container-fluid p-0 bg-secondary">
     <div class="jumbotron services-image jumbotron-fluid pl-1 pr-1 pb-5 bp-5 text-center">
       <br>
-      <h1 class="text-center title mt-3">ONE MAN<br>MANY HATS</h1>
+      <h1 class="text-center title mt-3">PLUG IN<br>NEW SKILLS</h1>
       <p class="text-light subtitle mt-3 mb-4 pl-3 pr-3">AN ALL ROUND DIGITAL MARKETER AT YOUR SERVICE</p>
       <a href="contact.html"><button type="button" class="btn btn-primary small">Book A Free Consultation</button></a>
     </div>
@@ -61,11 +85,11 @@
   <!-- SERVICES -->
 
 
-  <div class="container-fluid">
-    <div class="card w-90 m-auto text-center services-intro">
+  <div class="container">
+    <div class="card m-auto text-center">
       <div class="card-body">
-        <h5 class="card-title text-primary">Areas Of Expertise</h5>
-        <p class="card-text">I've picked up a range of skills throughout my career as a digital marketer. I'm confident working in the areas listed below, but if you need assistance with something else then please contact me. If I really am not able to assist, I'm always happy to point people in the direction of someone who can help.
+        <h2 class="card-title text-primary">Areas Of Expertise</h2>
+        <p class="card-text">I've picked up a range of skills throughout my career as a digital marketer. I'm confident working in the areas listed below, but if you need assistance with something else then please contact me. If I'm not able to help, I'm always happy to point people in the direction of someone who can.
         </div>
       </div>
     </div>
@@ -123,7 +147,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="text-primary featurette-article-r">Web Design</h2>
-        <p class="featurette-article-r">Need help with building landing pages? I have intermediate experience with HTML, CSS and the Bootstrap framework and can build responsive pages to help promote your services. They will all be tracked via your preferred web tracking tool to demonstrate their impact on your customers.</p>
+        <p class="featurette-article-r">Need help with building landing pages? I have experience with HTML, CSS and the Bootstrap framework and can build responsive pages to help promote your services. They will all be tracked via your preferred web tracking tool to demonstrate their impact on your customers.</p>
       </div>
       <div class="col-md-5 order-md-1 m-auto">
         <picture>
@@ -155,7 +179,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="text-primary featurette-article-r">Pay Per Click</h2>
-        <p class="featurette-article-r">I help clients to get the most out of their PPC budgets by setting up, executing and monitoring campaigns. If you have a web development team, I can work with them to optimise your PPC landing pages, raise quality scores and reduce costs on valuable keywords. Please get in touch to learn more about other optimisation techniques to consider.</p>
+        <p class="featurette-article-r">I help clients to get the most out of their PPC budgets by setting up, executing and monitoring campaigns. If you have a web development team, I can work with them to optimise your PPC landing pages, raise quality scores and reduce costs on valuable keywords. Please get in touch to learn more about other optimisation techniques that can help you.</p>
       </div>
       <div class="col-md-5 order-md-1 m-auto">
         <picture>
@@ -169,7 +193,7 @@
     <hr class="featurette-divider">
 
     <div class="container-fluid text-center pb-5 pt-3">
-      <h5 class="text-primary pb-3">Seen Something You Need?</h5>
+      <h5 class="text-primary pb-3">Seen Something I Can Help You With?</h5>
       <a href="contact.html"><button type="button" class="btn btn-primary small">Get In Touch</button></a>
     </div>
 
@@ -178,9 +202,10 @@
 
   <!-- Footer -->
 
-
-  <footer class="container-fluid bg-black pt-5 pb-5 m-0 text-center footer">
-    <img src="./Assets\favicons\favicon-32x32.png" /><p class="text-light small pt-2">Website created by Cameron Lund</p>
+  <footer class="container-fluid bg-black pt-5 pb-5 mt-5 text-center footer">
+    <img src="./Assets\favicons\favicon-32x32.png" />
+    <p class="text-light small pt-2">Website created by Cameron Lund</p>
+    <a target="_blank" href="https://www.linkedin.com/in/cameronlund/"><img style="width:24px;" src="./Assets\Companies\linkedin-transparent.png" /></a>
   </footer>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
