--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <!-- Required meta tags -->
   <meta http-equiv="content-type" content="text/html "charset="utf-8">
+  <meta type="content"
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description=" content="Experienced digital marketer based in London, supporting organistations with Web Analytics, CRO, SEO, PPC, Affiliate Marketing and Web Design.">
   <title>Cameron Lund | Freelance Digital Marketing Consultant</title>
@@ -63,10 +64,10 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./services.html">Services</a>
+          <a class="nav-link" href="services">Services</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./contact.html">Contact</a>
+          <a class="nav-link" href="contact">Contact</a>
         </li>
       </ul>
     </div>
@@ -80,7 +81,7 @@
       <br>
       <h1 class="text-center title mt-3">UP YOUR<br>DIGITAL GAME</h1>
       <p class="text-light subtitle mt-3 mb-4 pl-3 pr-3">WITH A FREELANCE DIGITAL MARKETING CONSULTANT</p>
-      <a href="contact.html"><button id="bookaconsultation" type="button" class="btn btn-primary small">Book A Free Consultation</button></a>
+      <a href="contact"><button id="bookaconsultation" type="button" class="btn btn-primary small">Book A Free Consultation</button></a>
     </div>
 
     <!-- Main Body Content Container -->
@@ -97,10 +98,9 @@
 
         <div class="mt-4 mb-5">
           <div class="container quotation-box m-auto p-3 m-1 position-relative">
-            <p class="quotation-text text-left p-3 m-0" style="opacity:0; height:auto;">A digital marketing freelancer is a vital asset for organisations looking to make quick and effective optimisations to their digital strategy in these uncertain times.<br><br>Get the experience you need at an affordable cost, without having to make a longer-term commitment.</p>
+            <p class="quotation-text float-left text-left pt-3 pr-1 pl-3"><span class="text-primary"><strong>A digital marketing freelancer</strong></span> is a vital asset for organisations looking to make quick and effective optimisations to their digital strategy in these uncertain times.<br><br>This is a chance to get the experience you need at an affordable cost, without having to make a longer-term commitment.</p>
               <div class="container position-absolute">
                 <img class="quotation-mark float-left position-absolute"  src="Assets\favicons\favicon-white.png">
-                <p class="quotation-text float-left pl-1 text-left pt-4 pr-5 position-absolute"><span class="text-primary"><strong>A digital marketing freelancer</strong></span> is a vital asset for organisations looking to make quick and effective optimisations to their digital strategy in these uncertain times.<br><br>Get the experience you need at an affordable cost, without having to make a longer-term commitment.</p>
               </div>
             </div>
         </div>
@@ -126,7 +126,7 @@ As a consultant I can help demystify the path to success in today’s highly-com
           <div class="collapse" id="moretext">
             <p>With my analytics background, I use data to drive decision-making and ensure results are quantifiable. Prior to consulting, I helped theatre ticketing website <a target="_blank" href="https://seatplan.com">SeatPlan</a> to triple monthly traffic over two years through SEO. At <a target="_blank" href="https://accorhotels.com">AccorHotels</a> I oversaw their UK PPC campaigns, ensuring they remained profitable to the business throughout my employment. More recently, I’ve worked with <a target="_blank" href="https://hilton.com">Hilton</a> to build out internal mass communication workflows and marketing performance dashboards. These are the kind of results and outputs I work hard to deliver for each of my employers.<br><br>
             If you are a growth-focused organisation, please do get in touch to learn more about my experience and find out how I can help you.</p>
-              <a href="contact.html"><button class="btn btn-primary">Contact</button></a>
+              <a href="contact"><button class="btn btn-primary">Contact</button></a>
             </div>
           </div>
         </div>
