--- a/services.html
+++ b/services.html
@@ -50,7 +50,7 @@
   <!-- End Google Tag Manager (noscript) -->
 
   <nav class="navbar navbar-dark bg-black navbar-expand-lg">
-    <a class="navbar-brand" href="./index.html">
+    <a class="navbar-brand" href="index">
       <img class="mr-2" src="Assets/favicons/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt="Cameron Lund Logo" loading="lazy">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,13 +59,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="#">Services</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./contact.html">Contact</a>
+          <a class="nav-link" href="contact">Contact</a>
         </li>
       </ul>
     </div>
@@ -78,7 +78,7 @@
       <br>
       <h1 class="text-center title mt-3">PLUG IN<br>NEW SKILLS</h1>
       <p class="text-light subtitle mt-3 mb-4 pl-3 pr-3">AN ALL ROUND DIGITAL MARKETER AT YOUR SERVICE</p>
-      <a href="contact.html"><button type="button" class="btn btn-primary small">Book A Free Consultation</button></a>
+      <a href="contact"><button type="button" class="btn btn-primary small">Book A Free Consultation</button></a>
     </div>
   </div>
 
@@ -194,7 +194,7 @@
 
     <div class="container-fluid text-center pb-5 pt-3">
       <h5 class="text-primary pb-3">Seen Something I Can Help You With?</h5>
-      <a href="contact.html"><button type="button" class="btn btn-primary small">Get In Touch</button></a>
+      <a href="contact"><button type="button" class="btn btn-primary small">Get In Touch</button></a>
     </div>
 
 
