--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
   <!-- End Google Tag Manager (noscript) -->
 
   <nav class="navbar navbar-dark bg-black navbar-expand-lg">
-    <a class="navbar-brand" href="./index.html">
+    <a class="navbar-brand" href="index">
       <img class="mr-2" src="Assets/favicons/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt="Cameron Lund Logo" loading="lazy">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,13 +59,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./services.html">Services</a>
+          <a class="nav-link" href="services">Services</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="./contact.html">Contact</a>
+          <a class="nav-link" href="contact">Contact</a>
         </li>
       </ul>
     </div>
